Memory issues when closing Blendera after Cycles baking #47076

Closed
opened 2015-12-28 21:24:40 +01:00 by Dalai Felinto · 6 comments

Blender Version
Broken: b909dfda
Worked: 2.76 (all the way to 6a529e14)

Short description of error
Memory issues when Cycles baking after shutter curve commit. The baking goes fine, but as soon as I close Blender I get unfreed memory errors. On OSX it seems the error was introduced at b909dfda

Exact steps for others to reproduce the error

  1. simple file:
    bake.blend
  • ./bin/blender -y bake.blend -d
  • close Blender
Memoryblock free: pointer not in memlist
Error: Not freed memory blocks: 4294967295, total unfreed memory 17591917613386.687500 MB

Running the file in background get a different error:

blender(31307,0x7fff72086000) malloc: ***error for object 0x1088a64f0: pointer being freed was not allocated*** set a breakpoint in malloc_error_break to debug
  1. complex file:
    bake_2.blend
  • ./bin/blender -y bake_2.blend -d
  • close Blender
Memoryblock free: pointer not in memlist
Error: Not freed memory blocks: 1, total unfreed memory 0.011765 MB
dist table len: 3084 0x107113c38
dist table len: 3084 0x105812238
**Blender Version** Broken: b909dfda Worked: 2.76 (all the way to 6a529e14) **Short description of error** Memory issues when Cycles baking after shutter curve commit. The baking goes fine, but as soon as I close Blender I get unfreed memory errors. On OSX it seems the error was introduced at b909dfda **Exact steps for others to reproduce the error** 1. simple file: [bake.blend](https://archive.blender.org/developer/F270773/bake.blend) * `./bin/blender -y bake.blend -d` * close Blender ``` Memoryblock free: pointer not in memlist Error: Not freed memory blocks: 4294967295, total unfreed memory 17591917613386.687500 MB ``` Running the file in background get a different error: ``` blender(31307,0x7fff72086000) malloc: ***error for object 0x1088a64f0: pointer being freed was not allocated*** set a breakpoint in malloc_error_break to debug ``` 2. complex file: [bake_2.blend](https://archive.blender.org/developer/F270774/bake_2.blend) * `./bin/blender -y bake_2.blend -d` * close Blender ``` Memoryblock free: pointer not in memlist Error: Not freed memory blocks: 1, total unfreed memory 0.011765 MB dist table len: 3084 0x107113c38 dist table len: 3084 0x105812238 ```
Author
Owner

Changed status to: 'Open'

Changed status to: 'Open'
Sergey Sharybin was assigned by Dalai Felinto 2015-12-28 21:24:40 +01:00
Author
Owner

Added subscriber: @dfelinto

Added subscriber: @dfelinto
Author
Owner

valgrind for bake.blend: err.txt (a few references of curvemapping_free_data)

valgrind for `bake.blend`: [err.txt](https://archive.blender.org/developer/F270814/err.txt) (a few references of `curvemapping_free_data`)

This issue was referenced by 16e1bbf1db

This issue was referenced by 16e1bbf1dbbefde14533b0de5b68ae3ac269e05c

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

This issue was referenced by c59e8cc12a

This issue was referenced by c59e8cc12a6b10b09b80b65b4d953d325b849cf4
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#47076
No description provided.