Fix T47076: Memory issues when closing Blendera after Cycles baking